#87 script_args in query (not working yet)
